# timetta-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  timetta_adapter.py
.superpowers/sdd/: final-review-b49381f..f2220af.diff  progress.md  review-67dafe7..f2220af.diff  task-1-brief.md  task-1-report.md
docs/superpowers/plans/: 2026-06-13-timetta-mcp.md  2026-06-15-timetta-mcp-oauth.md  2026-06-15-timetta-mcp-read-write.md  2026-07-01-change-issue-status.md
docs/superpowers/specs/: 2026-06-13-timetta-mcp-design.md  2026-06-15-timetta-mcp-oauth-design.md  2026-06-15-timetta-mcp-read-write-design.md  2026-07-01-change-issue-status-design.md
src/timetta_mcp/: __init__.py  auth.py  client.py  http_auth.py  metadata.py  server.py
tests/: conftest.py  test_auth.py  test_client.py  test_http_auth.py  test_metadata.py  test_server.py
