[project]
name = "timetta-mcp"
version = "0.3.0"
description = "Timetta time-tracking MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.27",
]

[project.scripts]
timetta-mcp = "timetta_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timetta_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
